<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="dougherty.metricconverter.MilesActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/milesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miles_label"
            style="@style/TextView.Label"/>

        <EditText
            android:id="@+id/milesET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:ems="6"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp">

        <TextView
            android:id="@+id/kilometersTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilometers_label"
            style="@style/TextView.Label"/>

        <TextView
            android:id="@+id/kilometers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/kilometers"
            style="@style/TextView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp">

        <Button
            android:id="@+id/kilometersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_to_kilometers"
            android:onClick="calculateAndDisplay"
            style="@style/Button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="onReset"
            style="@style/Button"/>
    </LinearLayout>

</LinearLayout>
